multi-day predictions

--- a/modeling/basic_model_framework.ipynb
+++ b/modeling/basic_model_framework.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": 40,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -12,7 +12,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 56,
+   "execution_count": 92,
    "metadata": {},
    "outputs": [
     {
@@ -63,7 +63,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 57,
+   "execution_count": 42,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -89,13 +89,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 147,
+   "execution_count": 43,
    "metadata": {},
    "outputs": [],
    "source": [
     "# 'deaths' and 'cases' contain the time-series of the outbreak\n",
     "df = load_data.load_county_level(data_dir = '../data/')\n",
-    "df = df.sort_values('#Deaths_3/28/2020', ascending=False)\n",
+    "df = df.sort_values('#Deaths_3/29/2020', ascending=False)\n",
     "# outcome_cases = load_data.outcome_cases # most recent day\n",
     "# outcome_deaths = load_data.outcome_deaths\n",
     "important_vars = load_data.important_keys(df)\n",
@@ -388,7 +388,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 157,
+   "execution_count": 44,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -419,7 +419,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 186,
+   "execution_count": 91,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -431,7 +431,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 187,
+   "execution_count": 103,
    "metadata": {
     "scrolled": true
    },
@@ -441,30 +441,55 @@
      "output_type": "stream",
      "text": [
       "Feature weights\n",
-      "log(deaths) : 0.9214259382229082\n",
-      "bias : 0.4285852132144887\n",
+      "log(deaths) : 0.9981505008513789\n",
+      "bias : 0.19806817090674161\n",
       "Feature weights\n",
-      "PopulationDensityperSqMile2010 : 1.3952039686175053e-05\n",
-      "PopulationEstimate2018 : -5.3260368922936066e-08\n",
-      "#ICU_beds : -0.0010819345092052378\n",
-      "MedianAge2010 : 0.025162912858146265\n",
-      "Smokers_Percentage : -0.03295094790592104\n",
-      "DiabetesPercentage : 0.04305861486500989\n",
-      "HeartDiseaseMortality : 0.00275548902350168\n",
-      "#Hospitals : 0.038337643781065064\n",
-      "log(deaths) : 0.8673027476387947\n",
-      "bias : -0.7992398606845101\n"
+      "PopulationDensityperSqMile2010 : 7.564484539346138e-06\n",
+      "PopulationEstimate2018 : 4.870246424704367e-08\n",
+      "#ICU_beds : -0.0004127820707512195\n",
+      "MedianAge2010 : 0.01887477603023386\n",
+      "Smokers_Percentage : -0.007293622992894233\n",
+      "DiabetesPercentage : 0.02302055984768759\n",
+      "HeartDiseaseMortality : 0.0014493648980887113\n",
+      "#Hospitals : 0.007608431024797937\n",
+      "log(deaths) : 0.9342734581903596\n",
+      "bias : -0.7356993261304152\n",
+      "Feature weights\n",
+      "log(deaths) : 0.9981505008513789\n",
+      "bias : 0.19806817090674161\n",
+      "Feature weights\n",
+      "log(deaths) : 0.9655859329391748\n",
+      "bias : 0.29005396981920656\n",
+      "Feature weights\n",
+      "log(deaths) : 0.9502200172608181\n",
+      "bias : 0.3378998196193722\n",
+      "Feature weights\n",
+      "log(deaths) : 0.9225917119833638\n",
+      "bias : 0.42318364462696306\n",
+      "Feature weights\n",
+      "log(deaths) : 0.9001884886739082\n",
+      "bias : 0.4755789604481969\n",
+      "Feature weights\n",
+      "log(deaths) : 0.8656056211882739\n",
+      "bias : 0.5606674381514144\n",
+      "Feature weights\n",
+      "log(deaths) : 0.830323777476037\n",
+      "bias : 0.6429281905665858\n",
+      "Feature weights\n",
+      "log(deaths) : 0.9773501198507929\n",
+      "bias : 0.15751814267906594\n"
      ]
     },
     {
      "data": {
       "text/plain": [
-       "['predicted_deaths_exponential_3',\n",
-       " 'predicted_deaths_shared_exponential_3',\n",
-       " 'predicted_deaths_shared_exponential_3_demographics']"
+       "['predicted_deaths_exponential_1',\n",
+       " 'predicted_deaths_shared_exponential_1',\n",
+       " 'predicted_deaths_shared_exponential_1_demographics',\n",
+       " 'predicted_deaths_ensemble_1']"
       ]
      },
-     "execution_count": 187,
+     "execution_count": 103,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -472,17 +497,197 @@
    "source": [
     "# Trains model on train_df and produces predictions for the final day for test_df and writes prediction\n",
     "# to a new column for test_df \n",
-    "fit_and_predict(df, method='exponential', outcome=outcome_type, mode='eval_mode',target_day=[1,2,3])\n",
-    "fit_and_predict(df,method='shared_exponential', outcome=outcome_type, mode='eval_mode',target_day=[1,2,3])\n",
+    "fit_and_predict(df, method='exponential', outcome=outcome_type, mode='eval_mode',target_day=[1])\n",
+    "fit_and_predict(df,method='shared_exponential', outcome=outcome_type, mode='eval_mode',target_day=[1])\n",
     "# fit_and_predict(train_df, test_df,'shared_exponential', mode='eval_mode',demographic_vars=important_vars)\n",
-    "fit_and_predict( df,method='shared_exponential', outcome=outcome_type, mode='eval_mode',demographic_vars=very_important_vars,target_day=[1,2,3])\n",
-    "# fit_and_predict(df, outcome=outcome_type, mode='eval_mode',demographic_vars=very_important_vars,\n",
-    "#                                     method='ensemble',target_day=[1])\n",
+    "fit_and_predict(df,method='shared_exponential', outcome=outcome_type, mode='eval_mode',demographic_vars=very_important_vars,target_day=[1])\n",
+    "fit_and_predict(df, outcome=outcome_type, mode='eval_mode',demographic_vars=[],\n",
+    "                                     method='ensemble',target_day=[1])\n",
     "# fit_and_predict(train_df, test_d f,method='exponential',mode='eval_mode',target_day = np.array([1,2]))\n",
     "\n",
     "# Finds the names of all the methods\n",
     "method_keys = [c for c in df if 'predicted' in c]\n",
     "method_keys"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 110,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Feature weights\n",
+      "log(deaths) : 0.9981505008513789\n",
+      "bias : 0.19806817090674161\n",
+      "Feature weights\n",
+      "PopulationDensityperSqMile2010 : 7.564484539346138e-06\n",
+      "PopulationEstimate2018 : 4.870246424704367e-08\n",
+      "#ICU_beds : -0.0004127820707512195\n",
+      "MedianAge2010 : 0.01887477603023386\n",
+      "Smokers_Percentage : -0.007293622992894233\n",
+      "DiabetesPercentage : 0.02302055984768759\n",
+      "HeartDiseaseMortality : 0.0014493648980887113\n",
+      "#Hospitals : 0.007608431024797937\n",
+      "log(deaths) : 0.9342734581903596\n",
+      "bias : -0.7356993261304152\n",
+      "Feature weights\n",
+      "log(deaths) : 0.9981505008513789\n",
+      "bias : 0.19806817090674161\n",
+      "Feature weights\n",
+      "log(deaths) : 0.9655859329391748\n",
+      "bias : 0.29005396981920656\n",
+      "Feature weights\n",
+      "log(deaths) : 0.9502200172608181\n",
+      "bias : 0.3378998196193722\n",
+      "Feature weights\n",
+      "log(deaths) : 0.9225917119833638\n",
+      "bias : 0.42318364462696306\n",
+      "Feature weights\n",
+      "log(deaths) : 0.9001884886739082\n",
+      "bias : 0.4755789604481969\n",
+      "Feature weights\n",
+      "log(deaths) : 0.8656056211882739\n",
+      "bias : 0.5606674381514144\n",
+      "Feature weights\n",
+      "log(deaths) : 0.830323777476037\n",
+      "bias : 0.6429281905665858\n",
+      "Feature weights\n",
+      "log(deaths) : 0.9773501198507929\n",
+      "bias : 0.15751814267906594\n",
+      "Feature weights\n",
+      "log(deaths) : 0.9655859329391748\n",
+      "bias : 0.29005396981920656\n",
+      "Feature weights\n",
+      "PopulationDensityperSqMile2010 : 9.209228836013169e-06\n",
+      "PopulationEstimate2018 : 4.3749240525478595e-09\n",
+      "#ICU_beds : -0.0005799993968502882\n",
+      "MedianAge2010 : 0.03200276019174071\n",
+      "Smokers_Percentage : -0.014218767140339197\n",
+      "DiabetesPercentage : 0.050953608342744074\n",
+      "HeartDiseaseMortality : 0.0008124452722854656\n",
+      "#Hospitals : 0.01841878242301278\n",
+      "log(deaths) : 0.902112936865755\n",
+      "bias : -1.177086927435698\n",
+      "Feature weights\n",
+      "log(deaths) : 0.9655859329391748\n",
+      "bias : 0.29005396981920656\n",
+      "Feature weights\n",
+      "log(deaths) : 0.9502200172608181\n",
+      "bias : 0.3378998196193722\n",
+      "Feature weights\n",
+      "log(deaths) : 0.9225917119833638\n",
+      "bias : 0.42318364462696306\n",
+      "Feature weights\n",
+      "log(deaths) : 0.9001884886739082\n",
+      "bias : 0.4755789604481969\n",
+      "Feature weights\n",
+      "log(deaths) : 0.8656056211882739\n",
+      "bias : 0.5606674381514144\n",
+      "Feature weights\n",
+      "log(deaths) : 0.830323777476037\n",
+      "bias : 0.6429281905665858\n",
+      "Feature weights\n",
+      "log(deaths) : 0.9773501198507929\n",
+      "bias : 0.15751814267906594\n",
+      "Feature weights\n",
+      "log(deaths) : 0.9778959946505006\n",
+      "bias : 0.15197076247648472\n",
+      "Feature weights\n",
+      "log(deaths) : 0.9502200172608181\n",
+      "bias : 0.3378998196193722\n",
+      "Feature weights\n",
+      "PopulationDensityperSqMile2010 : 1.232583737964398e-05\n",
+      "PopulationEstimate2018 : -1.9128872849364165e-08\n",
+      "#ICU_beds : -0.0009196830182655326\n",
+      "MedianAge2010 : 0.030005495300373296\n",
+      "Smokers_Percentage : -0.02188495057048413\n",
+      "DiabetesPercentage : 0.05324787346588178\n",
+      "HeartDiseaseMortality : 0.0011517061607217538\n",
+      "#Hospitals : 0.031196282315033144\n",
+      "log(deaths) : 0.8776264479458362\n",
+      "bias : -1.0190871939157677\n",
+      "Feature weights\n",
+      "log(deaths) : 0.9502200172608181\n",
+      "bias : 0.3378998196193722\n",
+      "Feature weights\n",
+      "log(deaths) : 0.9225917119833638\n",
+      "bias : 0.42318364462696306\n",
+      "Feature weights\n",
+      "log(deaths) : 0.9001884886739082\n",
+      "bias : 0.4755789604481969\n",
+      "Feature weights\n",
+      "log(deaths) : 0.8656056211882739\n",
+      "bias : 0.5606674381514144\n",
+      "Feature weights\n",
+      "log(deaths) : 0.830323777476037\n",
+      "bias : 0.6429281905665858\n",
+      "Feature weights\n",
+      "log(deaths) : 0.9773501198507929\n",
+      "bias : 0.15751814267906594\n",
+      "Feature weights\n",
+      "log(deaths) : 0.9778959946505006\n",
+      "bias : 0.15197076247648472\n",
+      "Feature weights\n",
+      "log(deaths) : 0.9568529048175889\n",
+      "bias : 0.22035797993950945\n",
+      "Feature weights\n",
+      "log(deaths) : 0.830323777476037\n",
+      "bias : 0.6429281905665858\n",
+      "Feature weights\n",
+      "PopulationDensityperSqMile2010 : 4.413962374404039e-05\n",
+      "PopulationEstimate2018 : 3.7425668421525734e-07\n",
+      "#ICU_beds : -0.0015526693892169863\n",
+      "MedianAge2010 : 0.08626146071204367\n",
+      "Smokers_Percentage : -0.077784411309751\n",
+      "DiabetesPercentage : 0.23046244041271752\n",
+      "HeartDiseaseMortality : 0.006883423775793174\n",
+      "#Hospitals : -0.00244505729241766\n",
+      "log(deaths) : 1.0097387160009639\n",
+      "bias : -5.086548648178437\n",
+      "Feature weights\n",
+      "log(deaths) : 0.830323777476037\n",
+      "bias : 0.6429281905665858\n",
+      "Feature weights\n",
+      "log(deaths) : 0.9773501198507929\n",
+      "bias : 0.15751814267906594\n",
+      "Feature weights\n",
+      "log(deaths) : 0.9778959946505006\n",
+      "bias : 0.15197076247648472\n",
+      "Feature weights\n",
+      "log(deaths) : 0.9568529048175889\n",
+      "bias : 0.22035797993950945\n",
+      "Feature weights\n",
+      "log(deaths) : 0.9736093828129483\n",
+      "bias : 0.16921572747893632\n",
+      "Feature weights\n",
+      "log(deaths) : 0.932080109746817\n",
+      "bias : 0.2785745836246978\n",
+      "Feature weights\n",
+      "log(deaths) : 0.9267404273223737\n",
+      "bias : 0.30513670191674636\n",
+      "Feature weights\n",
+      "log(deaths) : 0.8888856370716118\n",
+      "bias : 0.410280826464144\n"
+     ]
+    }
+   ],
+   "source": [
+    "for days_ahead in [1, 2, 3, 7]:\n",
+    "    for method in ['exponential', 'shared_exponential', 'ensemble']:\n",
+    "        fit_and_predict(df, method=method, outcome=outcome_type, mode='eval_mode',target_day=[days_ahead])\n",
+    "        if method == 'shared_exponential':\n",
+    "            fit_and_predict(df,method='shared_exponential', \n",
+    "                            outcome=outcome_type, \n",
+    "                            mode='eval_mode',\n",
+    "                            demographic_vars=very_important_vars,\n",
+    "                            target_day=[days_ahead])\n",
+    "method_keys = [c for c in df if 'predicted' in c]\n",
+    "geo = ['countyFIPS', 'CountyNamew/StateAbbrev']\n",
+    "df_preds = df[method_keys + geo]\n",
+    "df_preds.to_pickle(\"multi_day_1.pkl\")"
    ]
   },
   {
@@ -519,7 +724,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 190,
+   "execution_count": 105,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -532,19 +737,45 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 191,
+   "execution_count": 111,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
+      "Log scale MSE for predicted_deaths_exponential_1\n",
+      "0.42075412899721787\n",
+      "Log scale MSE for predicted_deaths_shared_exponential_1\n",
+      "0.2290852360589301\n",
+      "Log scale MSE for predicted_deaths_shared_exponential_1_demographics\n",
+      "0.19731341161347526\n",
+      "Log scale MSE for predicted_deaths_ensemble_1\n",
+      "0.31924700168652315\n",
+      "Log scale MSE for predicted_deaths_exponential_2\n",
+      "0.5161332759880083\n",
+      "Log scale MSE for predicted_deaths_shared_exponential_2_demographics\n",
+      "0.1994066182782056\n",
       "Log scale MSE for predicted_deaths_exponential_3\n",
-      "0.47677619001547156\n",
-      "Log scale MSE for predicted_deaths_shared_exponential_3\n",
-      "0.09026593703337174\n",
+      "0.5506042686540712\n",
       "Log scale MSE for predicted_deaths_shared_exponential_3_demographics\n",
-      "0.14254691080950804\n"
+      "0.3528300922010748\n",
+      "Log scale MSE for predicted_deaths_exponential_7\n",
+      "4.916215898170198\n",
+      "Log scale MSE for predicted_deaths_shared_exponential_7_demographics\n",
+      "1.1780952208807745\n",
+      "Log scale MSE for predicted_deaths_shared_exponential_2\n",
+      "0.22952186939144725\n",
+      "Log scale MSE for predicted_deaths_ensemble_2\n",
+      "0.3394501910392115\n",
+      "Log scale MSE for predicted_deaths_shared_exponential_3\n",
+      "0.3616491552501405\n",
+      "Log scale MSE for predicted_deaths_ensemble_3\n",
+      "0.335494405913944\n",
+      "Log scale MSE for predicted_deaths_shared_exponential_7\n",
+      "1.8025503175437014\n",
+      "Log scale MSE for predicted_deaths_ensemble_7\n",
+      "3.7703763258190426\n"
      ]
     }
    ],
@@ -559,19 +790,45 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 192,
+   "execution_count": 112,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
+      "Log scale l1 for predicted_deaths_exponential_1\n",
+      "0.33680896485362205\n",
+      "Log scale l1 for predicted_deaths_shared_exponential_1\n",
+      "0.25602843491606453\n",
+      "Log scale l1 for predicted_deaths_shared_exponential_1_demographics\n",
+      "0.22339941673572944\n",
+      "Log scale l1 for predicted_deaths_ensemble_1\n",
+      "0.29757147978122567\n",
+      "Log scale l1 for predicted_deaths_exponential_2\n",
+      "0.3938134970126218\n",
+      "Log scale l1 for predicted_deaths_shared_exponential_2_demographics\n",
+      "0.23690417104890463\n",
       "Log scale l1 for predicted_deaths_exponential_3\n",
-      "0.5047630436859746\n",
-      "Log scale l1 for predicted_deaths_shared_exponential_3\n",
-      "0.2302508856519387\n",
+      "0.47323363007750313\n",
       "Log scale l1 for predicted_deaths_shared_exponential_3_demographics\n",
-      "0.2879119236394401\n"
+      "0.4662803425972889\n",
+      "Log scale l1 for predicted_deaths_exponential_7\n",
+      "1.4553666081543009\n",
+      "Log scale l1 for predicted_deaths_shared_exponential_7_demographics\n",
+      "0.9558795628980049\n",
+      "Log scale l1 for predicted_deaths_shared_exponential_2\n",
+      "0.23637885721674406\n",
+      "Log scale l1 for predicted_deaths_ensemble_2\n",
+      "0.2791093878595847\n",
+      "Log scale l1 for predicted_deaths_shared_exponential_3\n",
+      "0.44306516734436213\n",
+      "Log scale l1 for predicted_deaths_ensemble_3\n",
+      "0.2907649582667944\n",
+      "Log scale l1 for predicted_deaths_shared_exponential_7\n",
+      "1.2100791346627977\n",
+      "Log scale l1 for predicted_deaths_ensemble_7\n",
+      "1.236787434858481\n"
      ]
     }
    ],
@@ -613,19 +870,45 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 194,
+   "execution_count": 113,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
+      "Raw l1 for predicted_deaths_exponential_1\n",
+      "11.813512679277924\n",
+      "Raw l1 for predicted_deaths_shared_exponential_1\n",
+      "7.249422928302962\n",
+      "Raw l1 for predicted_deaths_shared_exponential_1_demographics\n",
+      "8.695674174569431\n",
+      "Raw l1 for predicted_deaths_ensemble_1\n",
+      "9.340176469407998\n",
+      "Raw l1 for predicted_deaths_exponential_2\n",
+      "13.318016898302115\n",
+      "Raw l1 for predicted_deaths_shared_exponential_2_demographics\n",
+      "11.710615048534473\n",
       "Raw l1 for predicted_deaths_exponential_3\n",
-      "39.994366660251366\n",
-      "Raw l1 for predicted_deaths_shared_exponential_3\n",
-      "14.631845512559636\n",
+      "29.699134050791717\n",
       "Raw l1 for predicted_deaths_shared_exponential_3_demographics\n",
-      "12.066306846189972\n"
+      "19.200346093716618\n",
+      "Raw l1 for predicted_deaths_exponential_7\n",
+      "5462.3617004315565\n",
+      "Raw l1 for predicted_deaths_shared_exponential_7_demographics\n",
+      "20.898148866990205\n",
+      "Raw l1 for predicted_deaths_shared_exponential_2\n",
+      "12.738094982996326\n",
+      "Raw l1 for predicted_deaths_ensemble_2\n",
+      "8.750652658731136\n",
+      "Raw l1 for predicted_deaths_shared_exponential_3\n",
+      "20.528692946633196\n",
+      "Raw l1 for predicted_deaths_ensemble_3\n",
+      "8.37997593751935\n",
+      "Raw l1 for predicted_deaths_shared_exponential_7\n",
+      "42.3383494259824\n",
+      "Raw l1 for predicted_deaths_ensemble_7\n",
+      "3009.0964372161106\n"
      ]
     }
    ],
@@ -1696,7 +1979,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.6.10"
+   "version": "3.7.5"
   }
  },
  "nbformat": 4,
