multidays prediction result summary

--- a/modeling/basic_model_framework.ipynb
+++ b/modeling/basic_model_framework.ipynb
@@ -512,7 +512,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 110,
+   "execution_count": 118,
    "metadata": {},
    "outputs": [
     {
@@ -686,9 +686,26 @@
     "                            target_day=[days_ahead])\n",
     "method_keys = [c for c in df if 'predicted' in c]\n",
     "geo = ['countyFIPS', 'CountyNamew/StateAbbrev']\n",
-    "df_preds = df[method_keys + geo]\n",
-    "df_preds.to_pickle(\"multi_day_1.pkl\")"
+    "#df_preds = df[method_keys + geo]\n",
+    "#df_preds.to_pickle(\"multi_day_1.pkl\")"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 119,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "df_preds = df[method_keys + geo + ['deaths']]\n",
+    "df_preds.to_pickle(\"multi_day_2.pkl\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   },
   {
    "cell_type": "markdown",
@@ -737,7 +754,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 111,
+   "execution_count": 121,
    "metadata": {},
    "outputs": [
     {
@@ -745,37 +762,37 @@
      "output_type": "stream",
      "text": [
       "Log scale MSE for predicted_deaths_exponential_1\n",
-      "0.42075412899721787\n",
+      "0.42459099381536586\n",
       "Log scale MSE for predicted_deaths_shared_exponential_1\n",
       "0.2290852360589301\n",
       "Log scale MSE for predicted_deaths_shared_exponential_1_demographics\n",
       "0.19731341161347526\n",
       "Log scale MSE for predicted_deaths_ensemble_1\n",
-      "0.31924700168652315\n",
+      "0.31845271147184584\n",
       "Log scale MSE for predicted_deaths_exponential_2\n",
-      "0.5161332759880083\n",
+      "0.47233850258011445\n",
       "Log scale MSE for predicted_deaths_shared_exponential_2_demographics\n",
       "0.1994066182782056\n",
       "Log scale MSE for predicted_deaths_exponential_3\n",
-      "0.5506042686540712\n",
+      "0.590807505263815\n",
       "Log scale MSE for predicted_deaths_shared_exponential_3_demographics\n",
       "0.3528300922010748\n",
       "Log scale MSE for predicted_deaths_exponential_7\n",
-      "4.916215898170198\n",
+      "1.6315364766020761\n",
       "Log scale MSE for predicted_deaths_shared_exponential_7_demographics\n",
       "1.1780952208807745\n",
       "Log scale MSE for predicted_deaths_shared_exponential_2\n",
       "0.22952186939144725\n",
       "Log scale MSE for predicted_deaths_ensemble_2\n",
-      "0.3394501910392115\n",
+      "0.3061657657231749\n",
       "Log scale MSE for predicted_deaths_shared_exponential_3\n",
       "0.3616491552501405\n",
       "Log scale MSE for predicted_deaths_ensemble_3\n",
-      "0.335494405913944\n",
+      "0.35277245427860426\n",
       "Log scale MSE for predicted_deaths_shared_exponential_7\n",
       "1.8025503175437014\n",
       "Log scale MSE for predicted_deaths_ensemble_7\n",
-      "3.7703763258190426\n"
+      "1.1939448150784713\n"
      ]
     }
    ],
@@ -790,7 +807,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 112,
+   "execution_count": 122,
    "metadata": {},
    "outputs": [
     {
@@ -798,37 +815,37 @@
      "output_type": "stream",
      "text": [
       "Log scale l1 for predicted_deaths_exponential_1\n",
-      "0.33680896485362205\n",
+      "0.33610136991229744\n",
       "Log scale l1 for predicted_deaths_shared_exponential_1\n",
       "0.25602843491606453\n",
       "Log scale l1 for predicted_deaths_shared_exponential_1_demographics\n",
       "0.22339941673572944\n",
       "Log scale l1 for predicted_deaths_ensemble_1\n",
-      "0.29757147978122567\n",
+      "0.2940994630511822\n",
       "Log scale l1 for predicted_deaths_exponential_2\n",
-      "0.3938134970126218\n",
+      "0.37962676161439735\n",
       "Log scale l1 for predicted_deaths_shared_exponential_2_demographics\n",
       "0.23690417104890463\n",
       "Log scale l1 for predicted_deaths_exponential_3\n",
-      "0.47323363007750313\n",
+      "0.5108177399988812\n",
       "Log scale l1 for predicted_deaths_shared_exponential_3_demographics\n",
       "0.4662803425972889\n",
       "Log scale l1 for predicted_deaths_exponential_7\n",
-      "1.4553666081543009\n",
+      "1.0056056042058654\n",
       "Log scale l1 for predicted_deaths_shared_exponential_7_demographics\n",
       "0.9558795628980049\n",
       "Log scale l1 for predicted_deaths_shared_exponential_2\n",
       "0.23637885721674406\n",
       "Log scale l1 for predicted_deaths_ensemble_2\n",
-      "0.2791093878595847\n",
+      "0.2512923747381703\n",
       "Log scale l1 for predicted_deaths_shared_exponential_3\n",
       "0.44306516734436213\n",
       "Log scale l1 for predicted_deaths_ensemble_3\n",
-      "0.2907649582667944\n",
+      "0.331853519567436\n",
       "Log scale l1 for predicted_deaths_shared_exponential_7\n",
       "1.2100791346627977\n",
       "Log scale l1 for predicted_deaths_ensemble_7\n",
-      "1.236787434858481\n"
+      "0.8340329234462853\n"
      ]
     }
    ],
@@ -870,7 +887,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 113,
+   "execution_count": 120,
    "metadata": {},
    "outputs": [
     {
@@ -878,37 +895,37 @@
      "output_type": "stream",
      "text": [
       "Raw l1 for predicted_deaths_exponential_1\n",
-      "11.813512679277924\n",
+      "14.114369821156847\n",
       "Raw l1 for predicted_deaths_shared_exponential_1\n",
       "7.249422928302962\n",
       "Raw l1 for predicted_deaths_shared_exponential_1_demographics\n",
       "8.695674174569431\n",
       "Raw l1 for predicted_deaths_ensemble_1\n",
-      "9.340176469407998\n",
+      "10.350624244858587\n",
       "Raw l1 for predicted_deaths_exponential_2\n",
-      "13.318016898302115\n",
+      "17.241870635563824\n",
       "Raw l1 for predicted_deaths_shared_exponential_2_demographics\n",
       "11.710615048534473\n",
       "Raw l1 for predicted_deaths_exponential_3\n",
-      "29.699134050791717\n",
+      "43.64532126326604\n",
       "Raw l1 for predicted_deaths_shared_exponential_3_demographics\n",
       "19.200346093716618\n",
       "Raw l1 for predicted_deaths_exponential_7\n",
-      "5462.3617004315565\n",
+      "54.47024004752492\n",
       "Raw l1 for predicted_deaths_shared_exponential_7_demographics\n",
       "20.898148866990205\n",
       "Raw l1 for predicted_deaths_shared_exponential_2\n",
       "12.738094982996326\n",
       "Raw l1 for predicted_deaths_ensemble_2\n",
-      "8.750652658731136\n",
+      "7.60184416599453\n",
       "Raw l1 for predicted_deaths_shared_exponential_3\n",
       "20.528692946633196\n",
       "Raw l1 for predicted_deaths_ensemble_3\n",
-      "8.37997593751935\n",
+      "14.854131955833525\n",
       "Raw l1 for predicted_deaths_shared_exponential_7\n",
       "42.3383494259824\n",
       "Raw l1 for predicted_deaths_ensemble_7\n",
-      "3009.0964372161106\n"
+      "33.82302418875592\n"
      ]
     }
    ],
