polishing residual plots

--- a/modeling/basic_model_framework.ipynb
+++ b/modeling/basic_model_framework.ipynb
@@ -425,7 +425,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 675,
+   "execution_count": 197,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -502,34 +502,156 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 677,
+   "execution_count": 195,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Feature weights\n",
+      "log(deaths) : 0.9981505008513798\n",
+      "bias : 0.19806817090673984\n",
+      "Feature weights\n",
+      "PopulationDensityperSqMile2010 : 7.564484539346035e-06\n",
+      "PopulationEstimate2018 : 4.8702464247040915e-08\n",
+      "#ICU_beds : -0.00041278207075121\n",
+      "MedianAge2010 : 0.018874776030234106\n",
+      "Smokers_Percentage : -0.0072936229928942786\n",
+      "DiabetesPercentage : 0.023020559847687583\n",
+      "HeartDiseaseMortality : 0.0014493648980887074\n",
+      "#Hospitals : 0.007608431024797871\n",
+      "log(deaths) : 0.9342734581903599\n",
+      "bias : -0.7356993261304198\n",
+      "Feature weights\n",
+      "log(deaths) : 0.9981505008513798\n",
+      "bias : 0.19806817090673984\n",
+      "Feature weights\n",
+      "log(deaths) : 0.9655859329391748\n",
+      "bias : 0.29005396981920606\n",
+      "Feature weights\n",
+      "log(deaths) : 0.9502200172608184\n",
+      "bias : 0.3378998196193733\n",
+      "Feature weights\n",
+      "log(deaths) : 0.9225917119833639\n",
+      "bias : 0.42318364462696056\n",
+      "Feature weights\n",
+      "log(deaths) : 0.900188488673908\n",
+      "bias : 0.47557896044819803\n",
+      "Feature weights\n",
+      "log(deaths) : 0.8656056211882739\n",
+      "bias : 0.5606674381514144\n",
+      "Feature weights\n",
+      "log(deaths) : 0.830323777476037\n",
+      "bias : 0.6429281905665858\n",
+      "Feature weights\n",
+      "log(deaths) : 0.9773501198507929\n",
+      "bias : 0.15751814267906594\n",
+      "Feature weights\n",
+      "log(deaths) : 0.9655859329391748\n",
+      "bias : 0.29005396981920606\n",
+      "Feature weights\n",
+      "PopulationDensityperSqMile2010 : 9.209228836013172e-06\n",
+      "PopulationEstimate2018 : 4.374924052543492e-09\n",
+      "#ICU_beds : -0.0005799993968502674\n",
+      "MedianAge2010 : 0.03200276019174072\n",
+      "Smokers_Percentage : -0.0142187671403388\n",
+      "DiabetesPercentage : 0.05095360834274398\n",
+      "HeartDiseaseMortality : 0.0008124452722854279\n",
+      "#Hospitals : 0.018418782423012845\n",
+      "log(deaths) : 0.9021129368657562\n",
+      "bias : -1.1770869274356985\n",
+      "Feature weights\n",
+      "log(deaths) : 0.9655859329391748\n",
+      "bias : 0.29005396981920606\n",
+      "Feature weights\n",
+      "log(deaths) : 0.9502200172608184\n",
+      "bias : 0.3378998196193733\n",
+      "Feature weights\n",
+      "log(deaths) : 0.9225917119833639\n",
+      "bias : 0.42318364462696056\n",
+      "Feature weights\n",
+      "log(deaths) : 0.900188488673908\n",
+      "bias : 0.47557896044819803\n",
+      "Feature weights\n",
+      "log(deaths) : 0.8656056211882739\n",
+      "bias : 0.5606674381514144\n",
+      "Feature weights\n",
+      "log(deaths) : 0.830323777476037\n",
+      "bias : 0.6429281905665858\n",
+      "Feature weights\n",
+      "log(deaths) : 0.9773501198507929\n",
+      "bias : 0.15751814267906594\n",
+      "Feature weights\n",
+      "log(deaths) : 0.9778959946505006\n",
+      "bias : 0.15197076247648472\n",
+      "Feature weights\n",
+      "log(deaths) : 0.9502200172608184\n",
+      "bias : 0.3378998196193733\n",
+      "Feature weights\n",
+      "PopulationDensityperSqMile2010 : 1.2325837379643949e-05\n",
+      "PopulationEstimate2018 : -1.9128872849362365e-08\n",
+      "#ICU_beds : -0.0009196830182655411\n",
+      "MedianAge2010 : 0.03000549530037332\n",
+      "Smokers_Percentage : -0.0218849505704841\n",
+      "DiabetesPercentage : 0.05324787346588239\n",
+      "HeartDiseaseMortality : 0.0011517061607217282\n",
+      "#Hospitals : 0.031196282315033137\n",
+      "log(deaths) : 0.8776264479458362\n",
+      "bias : -1.0190871939157726\n",
+      "Feature weights\n",
+      "log(deaths) : 0.9502200172608184\n",
+      "bias : 0.3378998196193733\n",
+      "Feature weights\n",
+      "log(deaths) : 0.9225917119833639\n",
+      "bias : 0.42318364462696056\n",
+      "Feature weights\n",
+      "log(deaths) : 0.900188488673908\n",
+      "bias : 0.47557896044819803\n",
+      "Feature weights\n",
+      "log(deaths) : 0.8656056211882739\n",
+      "bias : 0.5606674381514144\n",
+      "Feature weights\n",
+      "log(deaths) : 0.830323777476037\n",
+      "bias : 0.6429281905665858\n",
+      "Feature weights\n",
+      "log(deaths) : 0.9773501198507929\n",
+      "bias : 0.15751814267906594\n",
+      "Feature weights\n",
+      "log(deaths) : 0.9778959946505006\n",
+      "bias : 0.15197076247648472\n",
+      "Feature weights\n",
+      "log(deaths) : 0.9568529048175889\n",
+      "bias : 0.22035797993950945\n"
+     ]
+    }
+   ],
    "source": [
-    "\n",
-    "# for days_ahead in [1, 2, 3, 7]:\n",
-    "#     for method in ['exponential', 'shared_exponential', 'ensemble']:\n",
-    "#         fit_and_predict(df, method=method, outcome=outcome_type, mode='eval_mode',target_day=[days_ahead])\n",
-    "#         if method == 'shared_exponential':\n",
-    "#             fit_and_predict(df,method='shared_exponential', \n",
-    "#                             outcome=outcome_type, \n",
-    "#                             mode='eval_mode',\n",
-    "#                             demographic_vars=very_important_vars,\n",
-    "#                             target_day=[days_ahead])\n",
-    "# method_keys = [c for c in df if 'predicted' in c]\n",
-    "# geo = ['countyFIPS', 'CountyNamew/StateAbbrev']\n",
+    "for days_ahead in [1, 2, 3]:\n",
+    "    for method in ['exponential', 'shared_exponential', 'ensemble']:  \n",
+    "        fit_and_predict(df, method=method, outcome=outcome_type, mode='eval_mode',target_day=np.array([days_ahead]))\n",
+    "        \n",
+    "        if method == 'shared_exponential':\n",
+    "            fit_and_predict(df,method='shared_exponential', \n",
+    "                             outcome=outcome_type, \n",
+    "                             mode='eval_mode',\n",
+    "                             demographic_vars=very_important_vars,\n",
+    "                             target_day=np.array([days_ahead]))\n",
+    "method_keys = [c for c in df if 'predicted' in c]\n",
+    "geo = ['countyFIPS', 'CountyNamew/StateAbbrev']\n",
     "# df_preds = df[method_keys + geo]\n",
     "# df_preds.to_pickle(\"multi_day_1.pkl\")"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 678,
+   "execution_count": 199,
    "metadata": {},
    "outputs": [],
    "source": [
-    "df_preds = df[method_keys + geo + ['deaths']]\n",
-    "df_preds.to_pickle(\"multi_day_2.pkl\")"
+    "method_keys = [c for c in df if 'predicted' in c]\n",
+    "#df_preds = df[method_keys + geo + ['deaths']]\n",
+    "#df_preds.to_pickle(\"multi_day_2.pkl\")"
    ]
   },
   {
@@ -649,15 +771,37 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 685,
+   "execution_count": 200,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
+      "Raw l1 for predicted_deaths_exponential_1\n",
+      "10.212454065131153\n",
+      "Raw l1 for predicted_deaths_shared_exponential_1\n",
+      "7.249422928303043\n",
+      "Raw l1 for predicted_deaths_shared_exponential_1_demographics\n",
+      "8.69567417456938\n",
       "Raw l1 for predicted_deaths_ensemble_1\n",
-      "10.400091209902834\n"
+      "8.548761662535114\n",
+      "Raw l1 for predicted_deaths_exponential_2\n",
+      "13.57986367208856\n",
+      "Raw l1 for predicted_deaths_shared_exponential_2_demographics\n",
+      "7.973081256574322\n",
+      "Raw l1 for predicted_deaths_exponential_3\n",
+      "21.039525636886403\n",
+      "Raw l1 for predicted_deaths_shared_exponential_3_demographics\n",
+      "10.618675731271862\n",
+      "Raw l1 for predicted_deaths_shared_exponential_2\n",
+      "12.55945391382441\n",
+      "Raw l1 for predicted_deaths_ensemble_2\n",
+      "12.367529975417884\n",
+      "Raw l1 for predicted_deaths_shared_exponential_3\n",
+      "13.206711089421523\n",
+      "Raw l1 for predicted_deaths_ensemble_3\n",
+      "9.499547975017318\n"
      ]
     }
    ],
@@ -1655,7 +1799,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.6.10"
+   "version": "3.7.5"
   }
  },
  "nbformat": 4,
